# Face-Detection-using-ROS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  EMOTION_DETECTION_README.md  README.md  WINDOWS_SETUP.md  package.xml  requirements.txt  setup_permissions.sh  test_application.py  test_emotion_standalone.py
config/: face_detection_params.yaml
docs/: project_structure.md
launch/: camera_only.launch  detection_only.launch  emotion_detection_no_gui.launch  emotion_system.launch  face_detection.launch
scripts/: camera_node.py  emotion_detector_node.py  emotion_gui_node.py  face_detector_node.py  face_visualizer_node.py  mood_chatbot_node.py
