<?xml version="1.0"?>
<package format="2">
  <name>face_detection_pkg</name>
  <version>1.0.0</version>
  <description>Face detection using ROS and OpenCV</description>
  
  <maintainer email="annie@example.com">Annie Mahajan</maintainer>
  
  <license>MIT</license>
  
  <url type="website">https://github.com/AnnieMahajan454/Face-Detection-using-ROS</url>
  <url type="bugtracker">https://github.com/AnnieMahajan454/Face-Detection-using-ROS/issues</url>
  <url type="repository">https://github.com/AnnieMahajan454/Face-Detection-using-ROS</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  
  <export>
  </export>
</package>
